--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "pixi.js": "^4.5.6",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-icons-kit": "^1.0.7",
     "react-scripts": "1.0.13",
     "react-transition-group": "^2.2.1"
   },
